<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.updteCustomer.CustomerDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/warm_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Ahmad Itman" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customersRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/addActionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="@string/add_action"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_add_24"
            app:drawableTint="@color/green_500" />

        <Spinner
            android:id="@+id/actionSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:visibility="gone"/>

        <View
            android:id="@+id/dividerV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/warm_gray"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryCodeV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            android:visibility="gone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryCodeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/add_country_code"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            android:visibility="gone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            android:visibility="gone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/location_hint"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/followUpV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/followUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/comment"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@color/teal_700"
            android:textAllCaps="false"
            android:text="@string/update"
            android:textColor="@color/white"
            android:visibility="gone"/>



    </LinearLayout>

</ScrollView>