<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.addCustomer.AddCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/addBtn">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/customer_name_hint"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/actionSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/warm_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryCodeV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryCodeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/add_country_code"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/location_hint"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/followUpV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/warm_gray"
            app:errorEnabled="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/followUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:hint="@string/comment"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/green_500"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="60dp"
        android:background="@color/teal_700"
        android:text="@string/add"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/loaderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>