<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_type"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/actionTypeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="call" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/callActionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneLableTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/phoneLableTv"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="010101101010" />


        <ImageView
            android:id="@+id/callIconLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_call_24"
            app:tint="@color/green_500" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visitActionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/locationLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/locationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_toStartOf="@+id/locationIconLabel"
            android:layout_toEndOf="@+id/locationLabelTv"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/locationIconLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_location_on_24"
            app:tint="@color/green_500" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/followUpView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/followUpLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_label"
            android:textColor="@color/warm_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/followUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/followUpLabelTv"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>


</LinearLayout>